added display styling and linked script

--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
       <button class="calculator__button">.</button>
       <button class="calculator__button">=</button>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
