--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="calculator__display">0</div>
+      <div class="calculator__display"></div>
 
+      <!-- <div class="calculator__buttonpad"> -->
       <button class="calculator__button">AC</button>
       <button class="calculator__button">+/-</button>
       <button class="calculator__button">%</button>
@@ -35,6 +36,7 @@
       <button class="calculator__button">0</button>
       <button class="calculator__button">.</button>
       <button class="calculator__button">=</button>
+      <!-- </div> -->
     </div>
     <script src="script.js"></script>
   </body>
