added data actions

--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
       <div class="calculator__display"></div>
 
       <!-- <div class="calculator__buttonpad"> -->
-      <button class="calculator__button">AC</button>
-      <button class="calculator__button">+/-</button>
-      <button class="calculator__button">%</button>
-      <button class="calculator__button">÷</button>
+      <button class="calculator__button" data-action="clear">AC</button>
+      <button class="calculator__button" data-action="negation">+/-</button>
+      <button class="calculator__button" data-action="percent">%</button>
+      <button class="calculator__button" data-action="divide">÷</button>
 
       <button class="calculator__button">7</button>
       <button class="calculator__button">8</button>
       <button class="calculator__button">9</button>
-      <button class="calculator__button">x</button>
+      <button class="calculator__button" data-action="multiply">x</button>
 
       <button class="calculator__button">4</button>
       <button class="calculator__button">5</button>
       <button class="calculator__button">6</button>
-      <button class="calculator__button">-</button>
+      <button class="calculator__button" data-action="subtract">-</button>
 
       <button class="calculator__button">1</button>
       <button class="calculator__button">2</button>
       <button class="calculator__button">3</button>
-      <button class="calculator__button">+</button>
+      <button class="calculator__button" data-action="add">+</button>
 
-      <button class="calculator__button">&larr;</button>
+      <button class="calculator__button" data-action="backspace">&larr;</button>
       <button class="calculator__button">0</button>
-      <button class="calculator__button">.</button>
-      <button class="calculator__button">=</button>
+      <button class="calculator__button" data-action="decimal">.</button>
+      <button class="calculator__button" data-action="calculate">=</button>
       <!-- </div> -->
     </div>
     <script src="script.js"></script>
