--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="calculator__display"></div>
+      <div class="previous-operand" data-previous-operand></div>
+      <div class="current-operand" data-current-operand></div>
 
       <!-- <div class="calculator__buttonpad"> -->
-      <button class="calculator__button" data-action="clear">AC</button>
-      <button class="calculator__button" data-action="negation">+/-</button>
-      <button class="calculator__button" data-action="percent">%</button>
-      <button class="calculator__button" data-action="divide">÷</button>
+      <button class="calculator__button" data-all-clear>AC</button>
+      <button class="calculator__button" data-negation>+/-</button>
+      <button class="calculator__button" data-percentage>%</button>
+      <button class="calculator__button" data-operation>÷</button>
 
-      <button class="calculator__button">7</button>
-      <button class="calculator__button">8</button>
-      <button class="calculator__button">9</button>
-      <button class="calculator__button" data-action="multiply">x</button>
+      <button class="calculator__button" data-number>7</button>
+      <button class="calculator__button" data-number>8</button>
+      <button class="calculator__button" data-number>9</button>
+      <button class="calculator__button" data-operation>x</button>
 
-      <button class="calculator__button">4</button>
-      <button class="calculator__button">5</button>
-      <button class="calculator__button">6</button>
-      <button class="calculator__button" data-action="subtract">-</button>
+      <button class="calculator__button" data-number>4</button>
+      <button class="calculator__button" data-number>5</button>
+      <button class="calculator__button" data-number>6</button>
+      <button class="calculator__button" data-operation>-</button>
 
-      <button class="calculator__button">1</button>
-      <button class="calculator__button">2</button>
-      <button class="calculator__button">3</button>
-      <button class="calculator__button" data-action="add">+</button>
+      <button class="calculator__button" data-number>1</button>
+      <button class="calculator__button" data-number>2</button>
+      <button class="calculator__button" data-number>3</button>
+      <button class="calculator__button" data-operation>+</button>
 
-      <button class="calculator__button" data-action="backspace">&larr;</button>
-      <button class="calculator__button">0</button>
-      <button class="calculator__button" data-action="decimal">.</button>
-      <button class="calculator__button" data-action="calculate">=</button>
+      <button class="calculator__button" data-backspace>&larr;</button>
+      <button class="calculator__button" data-number>0</button>
+      <button class="calculator__button" data-number>.</button>
+      <button class="calculator__button" data-calculation>=</button>
       <!-- </div> -->
     </div>
     <script src="script.js"></script>
