--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Calculator</title>
   </head>
   <body>
-    <div class="calculator">
+    <div class="calculator__grid">
       <div class="previous-operand" data-previous-operand></div>
       <div class="current-operand" data-current-operand></div>
 
