added some stuff, but this approach won't work, restart js again

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   </head>
   <body>
     <div class="calculator__grid">
-      <div class="previous-operand" data-previous-operand></div>
-      <div class="current-operand" data-current-operand></div>
+      <div class="output">
+        <div class="previous-operand" data-previous-operand></div>
+        <div class="current-operand" data-current-operand></div>
+      </div>
 
-      <!-- <div class="calculator__buttonpad"> -->
       <button class="calculator__button" data-all-clear>AC</button>
       <button class="calculator__button" data-negation>+/-</button>
       <button class="calculator__button" data-percentage>%</button>
@@ -37,7 +38,6 @@
       <button class="calculator__button" data-number>0</button>
       <button class="calculator__button" data-number>.</button>
       <button class="calculator__button" data-calculation>=</button>
-      <!-- </div> -->
     </div>
     <script src="script.js"></script>
   </body>
