--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       <button class="calculator__button" data-number>.</button>
       <button class="calculator__button" data-calculation>=</button>
     </div>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
