--- a/index.html
+++ b/index.html
@@ -8,36 +8,38 @@
     <title>Calculator</title>
   </head>
   <body>
-    <div class="calculator__grid">
-      <div class="output">
-        <div class="previous-operand" data-previous-operand></div>
-        <div class="current-operand" data-current-operand></div>
+    <div class="calculator">
+      <div class="calculator__grid">
+        <div class="output">
+          <div class="previous-operand" data-previous-operand></div>
+          <div class="current-operand" data-current-operand></div>
+        </div>
+
+        <button class="calculator__button" data-all-clear>AC</button>
+        <button class="calculator__button" data-negation>+/-</button>
+        <button class="calculator__button" data-percentage>%</button>
+        <button class="calculator__button" data-operation>÷</button>
+
+        <button class="calculator__button" data-number>7</button>
+        <button class="calculator__button" data-number>8</button>
+        <button class="calculator__button" data-number>9</button>
+        <button class="calculator__button" data-operation>x</button>
+
+        <button class="calculator__button" data-number>4</button>
+        <button class="calculator__button" data-number>5</button>
+        <button class="calculator__button" data-number>6</button>
+        <button class="calculator__button" data-operation>-</button>
+
+        <button class="calculator__button" data-number>1</button>
+        <button class="calculator__button" data-number>2</button>
+        <button class="calculator__button" data-number>3</button>
+        <button class="calculator__button" data-operation>+</button>
+
+        <button class="calculator__button" data-backspace>&larr;</button>
+        <button class="calculator__button" data-number>0</button>
+        <button class="calculator__button" data-number>.</button>
+        <button class="calculator__button" data-calculation>=</button>
       </div>
-
-      <button class="calculator__button" data-all-clear>AC</button>
-      <button class="calculator__button" data-negation>+/-</button>
-      <button class="calculator__button" data-percentage>%</button>
-      <button class="calculator__button" data-operation>÷</button>
-
-      <button class="calculator__button" data-number>7</button>
-      <button class="calculator__button" data-number>8</button>
-      <button class="calculator__button" data-number>9</button>
-      <button class="calculator__button" data-operation>x</button>
-
-      <button class="calculator__button" data-number>4</button>
-      <button class="calculator__button" data-number>5</button>
-      <button class="calculator__button" data-number>6</button>
-      <button class="calculator__button" data-operation>-</button>
-
-      <button class="calculator__button" data-number>1</button>
-      <button class="calculator__button" data-number>2</button>
-      <button class="calculator__button" data-number>3</button>
-      <button class="calculator__button" data-operation>+</button>
-
-      <button class="calculator__button" data-backspace>&larr;</button>
-      <button class="calculator__button" data-number>0</button>
-      <button class="calculator__button" data-number>.</button>
-      <button class="calculator__button" data-calculation>=</button>
     </div>
     <script src="app.js"></script>
   </body>
